--- a/Lab_01/Lab_01.App/MainWindow.xaml
+++ b/Lab_01/Lab_01.App/MainWindow.xaml
@@ -40,7 +40,9 @@
   </Grid.RowDefinitions>
     
     <TextBlock Text="Ключ (магический квадрат):" Grid.Row="0" Grid.Column="0"/>
-    <ComboBox Grid.Row="1" Grid.Column="0"></ComboBox>
+    <ComboBox x:Name="KeysComboBox" Grid.Row="1" Grid.Column="0">
+      <ComboBox.SelectionChanged><![CDATA[OnKeysComboBoxSelectionChanged]]></ComboBox.SelectionChanged>
+    </ComboBox>
     <TextBox x:Name="KeyTextBox" Grid.Row="2" Grid.Column="0" Text="2 7 6&#x0a;9 5 1&#x0a;4 3 8&#x0a;"/>
     <Button Width="160" Height="25" Content="Обновить ключ" Grid.Row="3" Grid.Column="0">
       <Button.Click><![CDATA[OnRefreshKeyButtonClick]]></Button.Click>
