--- a/Lab_01/Lab_01.App/MainWindow.xaml
+++ b/Lab_01/Lab_01.App/MainWindow.xaml
@@ -22,10 +22,10 @@
   </Grid.RowDefinitions>
   
   <TextBlock Text="Текст:" Grid.Row="0" Grid.Column="0"/>
-  <TextBox x:Name="TextTextBox" Text="qweASDzxc" Grid.Row="0" Grid.Column="1" />
+  <TextBox x:Name="TextTextBox" Text="qweASDzxc" Grid.Row="0" Grid.Column="1" AcceptsReturn="True" TextWrapping="Wrap" Watermark="Текст"/>
   
   <TextBlock Text="Шифротекст:" Grid.Row="2" Grid.Column="0"/>
-  <TextBox x:Name="CiphertextTextBox" Grid.Row="2" Grid.Column="1" />
+  <TextBox x:Name="CiphertextTextBox" Grid.Row="2" Grid.Column="1" AcceptsReturn="True" TextWrapping="Wrap" Watermark="Шифротекст"/>
 
   
   <Grid Grid.Row="0" Grid.Column="2" Margin="4">
@@ -35,8 +35,7 @@
   <Grid.RowDefinitions>
     <RowDefinition Height="Auto"/>
     <RowDefinition Height="25"/>
-    <RowDefinition Height="1*" MinHeight="50"/>
-    <RowDefinition Height="Auto"/>
+    <RowDefinition Height="1*" MinHeight="55"/>
     <RowDefinition Height="Auto"/>
   </Grid.RowDefinitions>
     
@@ -44,22 +43,21 @@
     <ComboBox x:Name="KeysComboBox" Grid.Row="1" Grid.Column="0">
       <ComboBox.SelectionChanged><![CDATA[OnKeysComboBoxSelectionChanged]]></ComboBox.SelectionChanged>
     </ComboBox>
-    <TextBox x:Name="KeyTextBox" Grid.Row="2" Grid.Column="0" Text="2 7 6&#x0a;9 5 1&#x0a;4 3 8&#x0a;"/>
-    <TextBox x:Name="FillerCharTextBox" Grid.Row="3" Grid.Column="0" Watermark="dfsf" Text=" "/>
-    <Button Width="160" Height="25" Content="Обновить ключ" Grid.Row="4" Grid.Column="0">
-      <Button.Click><![CDATA[OnRefreshKeyButtonClick]]></Button.Click>
-    </Button>
+    <TextBox x:Name="KeyTextBox" Grid.Row="2" Grid.Column="0" Text="2 7 6&#x0a;9 5 1&#x0a;4 3 8&#x0a;" Watermark="Магический квадрат:&#x0a;между ячейками в строке пробел, между строками перевод строки"/>
+    <TextBox x:Name="FillerCharTextBox" Grid.Row="3" Grid.Column="0" Watermark="Символ-заполнитель для пустых ячеек квадрата" Text=" "/>
   </Grid>
     
   <StackPanel Grid.Row="2" Grid.Column="2" Margin="4">
     <Button Width="160" Height="25" Content="Зашифровать">
       <Button.Click><![CDATA[OnCryptButtonClick]]></Button.Click>
     </Button>
+    <CheckBox x:Name="RemoveSpacesCheckBox" Content="Убрать пробелы"></CheckBox>
+    <CheckBox x:Name="ToUpperCheckBox" Content="Перевести в верхний регистр"></CheckBox>
+    <CheckBox x:Name="RemoveNonLettersCheckBox" Content="Убрать все не-буквы"></CheckBox>
+    <TextBlock Height="10"/>
     <Button Width="160" Height="25" Content="Расшифровать">
       <Button.Click><![CDATA[OnEncryptButtonClick]]></Button.Click>
     </Button>
-    <CheckBox Content="Убрать пробелы"></CheckBox>
-    <CheckBox Content="Перевести в верхний регистр"></CheckBox>
   </StackPanel>
 
 </Grid>
