--- a/Lab_01/Lab_01.App/MainWindow.xaml
+++ b/Lab_01/Lab_01.App/MainWindow.xaml
@@ -33,16 +33,19 @@
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="1*" MinHeight="55"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
             <TextBlock Text="Ключ (магический квадрат):" Grid.Row="0" Grid.Column="0"/>
             <ComboBox x:Name="KeysComboBox" Grid.Row="1" Grid.Column="0">
                 <ComboBox.SelectionChanged><![CDATA[OnKeysComboBoxSelectionChanged]]></ComboBox.SelectionChanged>
             </ComboBox>
-            <TextBox x:Name="KeyTextBox" Grid.Row="2" Grid.Column="0" Text="2 7 6&#x0a;9 5 1&#x0a;4 3 8&#x0a;"
+            <TextBox x:Name="KeyTextBox" AcceptsReturn="True" Grid.Row="2" Grid.Column="0"
+                     Text="2 7 6&#x0a;9 5 1&#x0a;4 3 8&#x0a;"
                      Watermark="Магический квадрат:&#x0a;между ячейками в строке пробел, между строками перевод строки"/>
             <TextBox x:Name="FillerCharTextBox" Grid.Row="3" Grid.Column="0"
                      Watermark="Символ-заполнитель для пустых ячеек квадрата" Text=" "/>
+            <TextBlock x:Name="MagicSquareInfoTextBlock" Text="" Grid.Row="4" Grid.Column="0"/>
         </Grid>
 
         <StackPanel Grid.Row="2" Grid.Column="2" Margin="4">
