--- a/Lab_01/Lab_01.App/MainWindow.xaml
+++ b/Lab_01/Lab_01.App/MainWindow.xaml
@@ -23,7 +23,6 @@
         <TextBox x:Name="CiphertextTextBox" Grid.Row="2" Grid.Column="1" AcceptsReturn="True" TextWrapping="Wrap"
                  Watermark="Шифротекст"/>
 
-
         <Grid Grid.Row="0" Grid.Column="2" Margin="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
@@ -32,6 +31,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="25"/>
                 <RowDefinition Height="1*" MinHeight="55"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
@@ -43,9 +43,12 @@
             <TextBox x:Name="KeyTextBox" AcceptsReturn="True" Grid.Row="2" Grid.Column="0"
                      Text="2 7 6&#x0a;9 5 1&#x0a;4 3 8&#x0a;"
                      Watermark="Магический квадрат:&#x0a;между ячейками в строке пробел, между строками перевод строки"/>
-            <TextBox x:Name="FillerCharTextBox" Grid.Row="3" Grid.Column="0"
+            <Button Width="180" Height="25" Grid.Row="3" Grid.Column="0" Content="Повернуть на 90 против часовой">
+                <Button.Click><![CDATA[OnRotateButtonClick]]></Button.Click>
+            </Button>
+            <TextBox x:Name="FillerCharTextBox" Grid.Row="4" Grid.Column="0"
                      Watermark="Символ-заполнитель для пустых ячеек квадрата" Text=" "/>
-            <TextBlock x:Name="MagicSquareInfoTextBlock" Text="" Grid.Row="4" Grid.Column="0"/>
+            <TextBlock x:Name="MagicSquareInfoTextBlock" Text="" Grid.Row="5" Grid.Column="0"/>
         </Grid>
 
         <StackPanel Grid.Row="2" Grid.Column="2" Margin="4">
